--- a/simplesdxl_colab.ipynb
+++ b/simplesdxl_colab.ipynb
@@ -1,1 +1,38 @@
+{
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "VjYy0F2gZIPR"
+      },
+      "outputs": [],
+      "source": [
+        "%cd /content\n",
+        "!git clone https://github.com/metercai/SimpleSDXL.git\n",
+        "%cd SimpleSDXL\n",
+        "!conda env create -f environment.yaml\n",
+        "!conda activate fooocus\n",
+        "!pip install -r requirements_versions.txt\n"
+        "!python entry_with_update.py --share --always-high-vram\n"
+      ]
+    }
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
 
