simplesdxl_colab.ipynb

--- a/simplesdxl_colab.ipynb
+++ b/simplesdxl_colab.ipynb
@@ -8,9 +8,10 @@
       },
       "outputs": [],
       "source": [
+        "!pip install pygit2==1.12.2\n",
         "%cd /content\n",
         "!git clone https://github.com/metercai/SimpleSDXL.git\n",
-        "%cd SimpleSDXL\n",
+        "%cd /content/SimpleSDXL\n",
         "!conda env create -f environment.yaml\n",
         "!conda activate fooocus\n",
         "!pip install -r requirements_versions.txt\n"
