simplesdxl_colab.ipynb

--- a/simplesdxl_colab.ipynb
+++ b/simplesdxl_colab.ipynb
@@ -12,10 +12,9 @@
         "%cd /content\n",
         "!git clone https://github.com/metercai/SimpleSDXL.git\n",
         "%cd /content/SimpleSDXL\n",
-	"!conda env create -f environment.yaml\n",
-	"!conda activate fooocus\n",
-	"!pip install -r requirements_versions.txt\n",
-        "!python entry_with_update.py --share --always-high-vram\n"
+        "!pip install -r requirements_versions.txt\n",
+        "!conda env create -f environment.yaml\n",
+        "!source activate fooocus && python entry_with_update.py --share --always-high-vram\n"
       ]
     }
   ],
