simplesdxl_colab.ipynb

--- a/simplesdxl_colab.ipynb
+++ b/simplesdxl_colab.ipynb
@@ -8,14 +8,12 @@
       },
       "outputs": [],
       "source": [
-        "# 安装 Anaconda\n",
-        "!wget -qO- https://repo.anaconda.com/archive/Anaconda3-2022.05-Linux-x86_64.sh -O anaconda.sh\n",
-        "!bash ./anaconda.sh -b -p /opt/conda\n",
+        "# 安装 Miniconda\n",
+        "!curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
+        "!bash Miniconda3-latest-Linux-x86_64.sh -b -p /opt/conda\n",
+        "!export PATH=/opt/conda/bin:$PATH\n",
         "!conda init bash\n",
         "!source ~/.bashrc\n",
-        "!conda config --set auto_activate_base false\n",
-        "!conda create -n fooocus python=3.8 -y\n",
-        "!conda activate fooocus\n",
         
         "# 安装 pygit2\n",
         "!pip install pygit2==1.12.2\n",
