--- a/simplesdxl_colab.ipynb
+++ b/simplesdxl_colab.ipynb
@@ -10,8 +10,13 @@
       "source": [
         "# 安装 Miniconda\n",
         "!curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
-        "!bash Miniconda3-latest-Linux-x86_64.sh -b -p /opt/conda\n",
-        "!export PATH=/opt/conda/bin:$PATH\n",
+        "!bash Miniconda3-latest-Linux-x86_64.sh -b -p /usr/local\n",
+        
+        "# 设置环境变量\n",
+        "import os\n",
+        "os.environ['PATH'] = '/usr/local/bin:/usr/local/condabin:' + os.environ['PATH']\n",
+        
+        "# 初始化 Conda\n",
         "!conda init bash\n",
         "!source ~/.bashrc\n",
         
@@ -32,7 +37,7 @@
         "!conda env create -f environment.yaml\n",
         
         "# 激活 Conda 环境并运行脚本\n",
-        "!source activate fooocus && python entry_with_update.py --share --always-high-vram\n"
+        "!source /usr/local/etc/profile.d/conda.sh && conda activate fooocus && python entry_with_update.py --share --always-high-vram\n"
       ]
     }
   ],
