simplesdxl_colab.ipynb

--- a/simplesdxl_colab.ipynb
+++ b/simplesdxl_colab.ipynb
@@ -10,19 +10,15 @@
       "source": [
         "# 安装 Miniconda\n",
         "!curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
-        "!bash Miniconda3-latest-Linux-x86_64.sh -b -p /usr/local/miniconda\n",
+        "!bash Miniconda3-latest-Linux-x86_64.sh -b -p /usr/local\n",
         
         "# 设置环境变量\n",
         "import os\n",
-        "os.environ['PATH'] = '/usr/local/miniconda/bin:' + os.environ['PATH']\n",
+        "os.environ['PATH'] = '/usr/local/bin:/usr/local/condabin:' + os.environ['PATH']\n",
         
         "# 初始化 Conda\n",
-        "!source /usr/local/miniconda/etc/profile.d/conda.sh\n",
-        "!conda init\n",
+        "!conda init bash\n",
         "!source ~/.bashrc\n",
-        
-        "# 安装 pygit2\n",
-        "!pip install pygit2==1.12.2\n",
         
         "# 切换到工作目录\n",
         "%cd /content\n",
@@ -37,8 +33,11 @@
         "# 创建 Conda 环境\n",
         "!conda env create -f environment.yaml\n",
         
-        "# 激活 Conda 环境并运行脚本\n",
-        "!source /usr/local/miniconda/etc/profile.d/conda.sh && conda activate fooocus && python entry_with_update.py --share --always-high-vram\n"
+        "# 确保 pygit2 在 fooocus 环境中安装\n",
+        "!source /usr/local/etc/profile.d/conda.sh && conda activate fooocus && conda install -y pygit2==1.12.2\n",
+        
+        "# 运行脚本\n",
+        "!source /usr/local/etc/profile.d/conda.sh && conda activate fooocus && python entry_with_update.py --share --always-high-vram\n"
       ]
     }
   ],
