--- a/simplesdxl_colab.ipynb
+++ b/simplesdxl_colab.ipynb
@@ -10,34 +10,26 @@
       "source": [
         "# 安装 Miniconda\n",
         "!curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
-        "!bash Miniconda3-latest-Linux-x86_64.sh -b -p /usr/local\n",
-        
-        "# 设置环境变量\n",
-        "import os\n",
-        "os.environ['PATH'] = '/usr/local/bin:/usr/local/condabin:' + os.environ['PATH']\n",
-        
+        "!bash Miniconda3-latest-Linux-x86_64.sh -b -p ~/miniconda\n",
+        "\n",
         "# 初始化 Conda\n",
-        "!conda init bash\n",
+        "import os\n",
+        "os.environ['PATH'] = f\"{os.path.expanduser('~')}/miniconda/bin:\" + os.environ['PATH']\n",
+        "!eval \"$($HOME/miniconda/bin/conda shell.bash hook)\"\n",
+        "!conda init\n",
         "!source ~/.bashrc\n",
-        
-        "# 切换到工作目录\n",
-        "%cd /content\n",
-        
-        "# 克隆 GitHub 仓库\n",
+        "\n",
+        "# 克隆 SimpleSDXL 仓库\n",
         "!git clone https://github.com/metercai/SimpleSDXL.git\n",
-        "%cd /content/SimpleSDXL\n",
-        
-        "# 安装 Python 依赖\n",
-        "!pip install -r requirements_versions.txt\n",
-        
+        "\n",
+        "# 切换到 SimpleSDXL 目录\n",
+        "%cd SimpleSDXL\n",
+        "\n",
         "# 创建 Conda 环境\n",
         "!conda env create -f environment.yaml\n",
-        
-        "# 确保 pygit2 在 fooocus 环境中安装\n",
-        "!source /usr/local/etc/profile.d/conda.sh && conda activate fooocus && conda install -y pygit2==1.12.2\n",
-        
-        "# 运行脚本\n",
-        "!source /usr/local/etc/profile.d/conda.sh && conda activate fooocus && python entry_with_update.py --share --always-high-vram\n"
+        "\n",
+        "# 激活 Conda 环境并安装 Python 依赖和运行脚本\n",
+        "!source ~/miniconda/bin/activate fooocus && pip install -r requirements_versions.txt && python entry_with_update.py --share --always-high-vram\n"
       ]
     }
   ],
