simplesdxl_colab.ipynb

--- a/simplesdxl_colab.ipynb
+++ b/simplesdxl_colab.ipynb
@@ -19,11 +19,12 @@
         "!conda init\n",
         "!source ~/.bashrc\n",
         "\n",
+        "%cd /content\n",
         "# 克隆 SimpleSDXL 仓库\n",
         "!git clone https://github.com/metercai/SimpleSDXL.git\n",
         "\n",
         "# 切换到 SimpleSDXL 目录\n",
-        "%cd SimpleSDXL\n",
+        "%cd /content/SimpleSDXL\n",
         "\n",
         "# 创建 Conda 环境\n",
         "!conda env create -f environment.yaml\n",
