simplesdxl_colab.ipynb

--- a/simplesdxl_colab.ipynb
+++ b/simplesdxl_colab.ipynb
@@ -8,29 +8,22 @@
       },
       "outputs": [],
       "source": [
-        "# 安装 Miniconda\n",
-        "!curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
-        "!bash Miniconda3-latest-Linux-x86_64.sh -b -p ~/miniconda\n",
+        "%cd /content",   
+        "# 安装必要的依赖\n",
+        "!apt-get update\n",
+        "!apt-get install -y git\n",
         "\n",
-        "# 初始化 Conda\n",
-        "import os\n",
-        "os.environ['PATH'] = f\"{os.path.expanduser('~')}/miniconda/bin:\" + os.environ['PATH']\n",
-        "!eval \"$($HOME/miniconda/bin/conda shell.bash hook)\"\n",
-        "!conda init\n",
-        "!source ~/.bashrc\n",
-        "\n",
-        "%cd /content\n",
         "# 克隆 SimpleSDXL 仓库\n",
         "!git clone https://github.com/metercai/SimpleSDXL.git\n",
         "\n",
         "# 切换到 SimpleSDXL 目录\n",
-        "%cd /content/SimpleSDXL\n",
+        "%cd  /content/SimpleSDXL\n",
         "\n",
-        "# 创建 Conda 环境\n",
-        "!conda env create -f environment.yaml\n",
+        "# 安装 Python 依赖\n",
+        "!pip install -r requirements_versions.txt\n",
         "\n",
-        "# 激活 Conda 环境并安装 Python 依赖和运行脚本\n",
-        "!source ~/miniconda/bin/activate fooocus && pip install -r requirements_versions.txt && python entry_with_update.py --share --always-high-vram\n"
+        "# 运行 Python 脚本\n",
+        "!python entry_with_update.py --share --always-high-vram\n"
       ]
     }
   ],
