simplesdxl_colab.ipynb

--- a/simplesdxl_colab.ipynb
+++ b/simplesdxl_colab.ipynb
@@ -8,7 +8,9 @@
       },
       "outputs": [],
       "source": [
-        "%cd /content",   
+        "# 切换到 content 目录\n", 
+        "%cd /content\n",  
+        "\n",
         "# 安装必要的依赖\n",
         "!apt-get update\n",
         "!apt-get install -y git\n",
