simplesdxl_colab.ipynb

--- a/simplesdxl_colab.ipynb
+++ b/simplesdxl_colab.ipynb
@@ -8,6 +8,9 @@
       },
       "outputs": [],
       "source": [
+        "# 切换到 content 目录\n",
+        "%cd /content\n",
+        "\n",
         "# 更新包列表并安装必要的软件包\n",
         "!apt-get update -qq\n",
         "!apt-get install -y -qq git\n",
@@ -16,7 +19,7 @@
         "!git clone https://github.com/metercai/SimpleSDXL.git\n",
         "\n",
         "# 切换到 SimpleSDXL 目录\n",
-        "%cd SimpleSDXL\n",
+        "%cd content/SimpleSDXL\n",
         "\n",
         "# 安装特定版本的 pygit2 依赖\n",
         "!pip install -q pygit2==1.12.2\n",
