simplesdxl_colab.ipynb

--- a/simplesdxl_colab.ipynb
+++ b/simplesdxl_colab.ipynb
@@ -8,24 +8,21 @@
       },
       "outputs": [],
       "source": [
-        "# 切换到 content 目录\n",
+        "# 切换到 SimpleSDXL 目录\n",
         "%cd /content\n",
         "\n",
-        "# 更新包列表并安装必要的软件包\n",
-        "!apt-get update -qq\n",
-        "!apt-get install -y -qq git\n",
+        "# 安装必要的依赖\n",
+        "!apt-get update\n",
+        "!apt-get install -y git\n",
         "\n",
         "# 克隆 SimpleSDXL 仓库\n",
         "!git clone https://github.com/metercai/SimpleSDXL.git\n",
         "\n",
         "# 切换到 SimpleSDXL 目录\n",
-        "%cd content/SimpleSDXL\n",
-        "\n",
-        "# 安装特定版本的 pygit2 依赖\n",
-        "!pip install -q pygit2==1.12.2\n",
+        "%cd SimpleSDXL\n",
         "\n",
         "# 安装 Python 依赖\n",
-        "!pip install -q -r requirements_versions.txt\n",
+        "!pip install -r requirements_versions.txt\n",
         "\n",
         "# 运行 Python 脚本\n",
         "!python entry_with_update.py --share --always-high-vram\n"
