simplesdxl_colab.ipynb

--- a/simplesdxl_colab.ipynb
+++ b/simplesdxl_colab.ipynb
@@ -19,7 +19,7 @@
         "!git clone https://github.com/metercai/SimpleSDXL.git\n",
         "\n",
         "# 切换到 SimpleSDXL 目录\n",
-        "%cd SimpleSDXL\n",
+        "%cd /content/SimpleSDXL\n",
         "\n",
         "# 安装 Python 依赖\n",
         "!pip install -r requirements_versions.txt\n",
